--- a/statefun-harness-remote/pom.xml
+++ b/statefun-harness-remote/pom.xml
@@ -5,27 +5,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>statefun-harness</artifactId>
+    <artifactId>statefun-harness-remote</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <undertow.version>1.4.18.Final</undertow.version>
+        <jackson-databind.version>2.13.1</jackson-databind.version>
         <protobuf.version>3.7.1</protobuf.version>
         <protoc-jar-maven-plugin.version>3.11.1</protoc-jar-maven-plugin.version>
-
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>statefun-flink-harness</artifactId>
+            <artifactId>statefun-sdk-java</artifactId>
             <version>3.2.0</version>
         </dependency>
         <dependency>
@@ -33,9 +28,17 @@
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>${undertow.version}</version>
+        </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -65,5 +68,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
