--- a/shopping-cart/module.yaml
+++ b/shopping-cart/module.yaml
@@ -16,58 +16,68 @@
 kind: io.statefun.endpoints.v2/http
 spec:
   functions: com.example/*
-  urlPathTemplate: http://shopping-cart-functions:1108/
+  urlPathTemplate: http://localhost:1108/
   transport:
     type: io.statefun.transports.v1/async
 ---
 kind: io.statefun.kafka.v1/ingress
 spec:
   id: example.com/add-to-cart
-  address: kafka:9092
+  address: localhost:9092
   consumerGroupId: my-group-id
   topics:
     - topic: add-to-cart
       valueType: com.example/AddToCart
       targets:
         - com.example/user-shopping-cart
+  properties:
+    - transaction.timeout.ms: 7200000
 ---
 kind: io.statefun.kafka.v1/ingress
 spec:
   id: example.com/clear-cart
-  address: kafka:9092
+  address: localhost:9092
   consumerGroupId: my-group-id
   topics:
     - topic: clear-cart
       valueType: com.example/ClearCart
       targets:
         - com.example/user-shopping-cart
+  properties:
+    - transaction.timeout.ms: 7200000
 ---
 kind: io.statefun.kafka.v1/ingress
 spec:
   id: example.com/checkout
-  address: kafka:9092
+  address: localhost:9092
   consumerGroupId: my-group-id
   topics:
     - topic: checkout
       valueType: com.example/Checkout
       targets:
         - com.example/user-shopping-cart
+  properties:
+    - transaction.timeout.ms: 7200000
 ---
 kind: io.statefun.kafka.v1/ingress
 spec:
   id: com.example/restock-items
-  address: kafka:9092
+  address: localhost:9092
   consumerGroupId: my-group-id
   topics:
     - topic: restock-items
       valueType: com.example/RestockItem
       targets:
         - com.example/stock
+  properties:
+    - transaction.timeout.ms: 7200000
 ---
 kind: io.statefun.kafka.v1/egress
 spec:
   id: com.example/receipts
-  address: kafka:9092
+  address: localhost:9092
   deliverySemantic:
     type: exactly-once
     transactionTimeout: 15min
+  properties:
+    - transaction.timeout.ms: 7200000
