--- a/shopping-cart-osp/docker-compose.yml
+++ b/shopping-cart-osp/docker-compose.yml
@@ -27,8 +27,6 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
-#    expose:
-#      - "1108"
     network_mode: host
 
   ###############################################################
@@ -36,7 +34,10 @@ services:
   ###############################################################
 
   statefun-manager:
-    image: flink-statefun-local:latest
+#    image: flink-statefun-local:latest
+    build:
+      context: ./
+      dockerfile: ./runtime-docker/Dockerfile
     expose:
       - "6123"
     ports:
@@ -44,90 +45,24 @@ services:
     environment:
       ROLE: master
       MASTER_HOST: localhost
-    volumes:
-      - ./module.yaml:/opt/statefun/modules/shopping-cart/module.yaml
+#    volumes:
+#      - ./module.yaml:/opt/statefun/modules/shopping-cart/module.yaml
     network_mode: host
 
   statefun-worker:
-    image: flink-statefun-local:latest
+#    image: flink-statefun-local:latest
+    build:
+      context: ./
+      dockerfile: ./runtime-docker/Dockerfile
     expose:
       - "6121"
       - "6122"
     depends_on:
       - statefun-manager
-      - kafka
       - shopping-cart-functions
-#    links:
-#      - "statefun-manager:statefun-manager"
-#      - "kafka:kafka"
-#      - "shopping-cart-functions:shopping-cart-functions"
     environment:
       ROLE: worker
       MASTER_HOST: localhost
-    volumes:
-      - ./module.yaml:/opt/statefun/modules/shopping-cart/module.yaml
+#    volumes:
+#      - ./module.yaml:/opt/statefun/modules/shopping-cart/module.yaml
     network_mode: host
-
-  ###############################################################
-  #    Kafka for ingress and egress
-  ###############################################################
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:5.4.3
-    environment:
-      ZOOKEEPER_CLIENT_PORT: "2181"
-    ports:
-      - "2181:2181"
-    network_mode: host
-
-  kafka:
-    image: confluentinc/cp-kafka:5.4.3
-    ports:
-      - "9092:9092"
-    depends_on:
-      - zookeeper
-    hostname: kafka
-#    links:
-#      - "zookeeper:zookeeper"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_MIN_INSYNC_REPLICAS: 1
-    network_mode: host
-
-
-#  kafka-2:
-#    image: confluentinc/cp-kafka:5.4.3
-#    ports:
-#      - "19092:19092"
-#    depends_on:
-#      - zookeeper
-#    #    links:
-#    #      - "zookeeper:zookeeper"
-#    environment:
-#      KAFKA_BROKER_ID: 2
-#      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:19092
-#      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-#    network_mode: host
-#  kafka-3:
-#    image: confluentinc/cp-kafka:5.4.3
-#    ports:
-#      - "29092:29092"
-#    depends_on:
-#      - zookeeper
-#    #    links:
-#    #      - "zookeeper:zookeeper"
-#    environment:
-#      KAFKA_BROKER_ID: 3
-#      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:29092
-#      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-#    network_mode: host
